# provenance-query-similarity

./: README.md  add_prov_cols.py  gen_parquet.py  main.py  pyproject.toml
experiments/: evaluate.py  extract_provenance.py  generate_queries.py  train_models.py
q12_versions/: query12_s1.sql  query12_s10.sql  query12_s100.sql  query12_s1000.sql  query12_s1001.sql  query12_s1002.sql  query12_s1003.sql  query12_s1004.sql  query12_s1005.sql  query12_s1006.sql  query12_s1007.sql  query12_s1008.sql  query12_s1009.sql  query12_s101.sql  query12_s1010.sql  query12_s1011.sql  query12_s1012.sql  query12_s1013.sql  query12_s1014.sql  query12_s1015.sql  query12_s1016.sql  query12_s1017.sql  query12_s1018.sql  query12_s1019.sql  query12_s102.sql  query12_s1020.sql  query12_s1021.sql  query12_s1022.sql  query12_s1023.sql  query12_s1024.sql  query12_s1025.sql  query12_s1026.sql  query12_s1027.sql  query12_s1028.sql  query12_s1029.sql  query12_s103.sql  query12_s1030.sql  query12_s1031.sql  query12_s1032.sql  query12_s1033.sql  (+1210 more)
q13_versions/: query13_s1.sql  query13_s10.sql  query13_s100.sql  query13_s1000.sql  query13_s1001.sql  query13_s1002.sql  query13_s1003.sql  query13_s1004.sql  query13_s1005.sql  query13_s1006.sql  query13_s1007.sql  query13_s1008.sql  query13_s1009.sql  query13_s101.sql  query13_s1010.sql  query13_s1011.sql  query13_s1012.sql  query13_s1013.sql  query13_s1014.sql  query13_s1015.sql  query13_s1016.sql  query13_s1017.sql  query13_s1018.sql  query13_s1019.sql  query13_s102.sql  query13_s1020.sql  query13_s1021.sql  query13_s1022.sql  query13_s1023.sql  (+1221 more)
(+10020 files in other folders)
